Some style and try to fix the loader

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -21,6 +21,8 @@ en:
   # ------------------
   # Header & footer
   # ------------------
+  header:
+    top: top
 
   # ------------------
   # Page translations
