--- a/locales/en.yml
+++ b/locales/en.yml
@@ -30,17 +30,20 @@ en:
   homepage:
     h1: "Home"
     intro:
-      - Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-      - Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      - Hello ! I am Bastien, student in web & mobile development.
+      - Driven by my passion for the Internet, I try to learn and discover new technologies every day.
 
   about:
     h1: "About"
     email:
       copy: "Copy"
       send: "Send an email"
+    caseStudy: "Case study (FR)"
+    technos: "My stack"
     text:
-      - Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-      - Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      - From a very young age, I devote myself to the creation of front-end languages web sites in back-end languages.
+      - During my training, I was able to develop my skills through several web and mobile projects. Today I wish to devote myself to the development of experiments.
+      - See my <a href="/images/CV.pdf" target="_blank">CV</a>
 
   projects:
     show-more: "show more"
