Add CV in en and rename CV to CV-fr

--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -43,7 +43,7 @@ fr:
     text:
       - Depuis tout jeune, je m'adonne a la création de site web des languages front-end au languages back-end.
       - Lors de ma formation, j'ai pu développer mes compétences à travers plusieurs projets web et mobiles. Aujourd'hui je souhaite me consacrer au développement d'expériences.
-      - Voir mon <a href="/images/CV.pdf" target="_blank">CV</a>
+      - Voir mon <a href="/images/CV-fr.pdf" target="_blank">CV</a>
 
   projects:
     show-more: "voir plus"
