--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -42,7 +42,7 @@ fr:
     caseStudy: "Etude de cas"
     technos: "Mes technos"
     text:
-      - Depuis tout jeune, je m'adonne a la création de site web des languages front-end au languages back-end.
+      - Depuis tout jeune, je m'adonne à la création de site web des langages front-end aux langages back-end.
       - Lors de ma formation, j'ai pu développer mes compétences à travers plusieurs projets web et mobiles. Aujourd'hui je souhaite me consacrer au développement d'expériences.
       - Voir mon <a href="/images/CV-fr.pdf" target="_blank">CV</a>
 
