--- a/locales/en.yml
+++ b/locales/en.yml
@@ -44,7 +44,7 @@ en:
     text:
       - From a very young age, I devote myself to the creation of front-end languages web sites in back-end languages.
       - During my training, I was able to develop my skills through several web and mobile projects. Today I wish to devote myself to the development of experiments.
-      - See my <a href="/images/CV-en.pdf" target="_blank">CV</a>
+      - See my <a href="/images/CV-en.pdf" target="_blank">CV</a> or my <a href="/images/book.pdf" target="_blank">book</a> in french
 
   projects:
     show-more: "show more"
