--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -44,7 +44,7 @@ fr:
     text:
       - Depuis tout jeune, je m'adonne à la création de site web des langages front-end aux langages back-end.
       - Lors de ma formation, j'ai pu développer mes compétences à travers plusieurs projets web et mobiles. Aujourd'hui je souhaite me consacrer au développement d'expériences.
-      - Voir mon <a href="/images/CV-fr.pdf" target="_blank">CV</a>
+      - Voir mon <a href="/images/CV-fr.pdf" target="_blank">CV</a> ou mon <a href="/images/book.pdf" target="_blank">book</a>
 
   projects:
     show-more: "voir plus"
