Edit the title for the homepage

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -4,7 +4,7 @@ en:
   # Root translations
   # ------------------
   titles:
-    homepage: "Homepage"
+    homepage: "Web developer"
     about: "About"
     projects: "Projects"
     project: "Project"
