--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -4,7 +4,7 @@ fr:
   # Root translations
   # ------------------
   titles:
-    homepage: "Accueil"
+    homepage: "Développeur web"
     about: "A propos"
     projects: "Projets"
     project: "Projet"
