Correction on the main menu for homepage

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -23,6 +23,8 @@ en:
   # Header & footer
   # ------------------
   header:
+    homepage: homepage
+    about: about
     top: top
 
   # ------------------
