Edit jobs and some awesome other things :)

--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -11,7 +11,7 @@ fr:
 
   descriptions:
     homepage: "Salut ! Je suis Bastien, étudiant en développement web & mobile. Porté par ma passion pour Internet, j’essaie d’apprendre et de découvrir de nouvelles technologies chaque jour..."
-    about: "À propos de moi ! Je suis Bastien, jeune développeur Bordellais et actuellement étudiant en deuxième année de DUT MMI à l'IUT Bordeaux Montaigne..."
+    about: "À propos de moi ! Je suis Bastien, jeune développeur Parisien et actuellement étudiant en stage de deuxième année de DUT MMI chez Unlikely Studio..."
 
   paths:
     # Paths
@@ -38,6 +38,7 @@ fr:
 
   about:
     h1: "A propos"
+    job: "creative developer"
     email:
       copy: "Copier"
       send: "Envoyer un mail"
