--- a/locales/en.yml
+++ b/locales/en.yml
@@ -11,7 +11,7 @@ en:
 
   descriptions:
     homepage: "Hello ! I am Bastien, student in web & mobile development. Driven by my passion for the Internet, I try to learn and discover new technologies every day... Visit my portfolio"
-    about: "About me ! I am Bastien, a young Bordeaux based developer and currently a second year student in multimedia and internet at IUT Bordeaux Montaigne..."
+    about: "About me ! I am Bastien, a young Paris based developer and currently a second year student in multimedia and internet at IUT Bordeaux Montaigne, intern at Unlikely Studio..."
 
   paths:
     # Paths
@@ -38,6 +38,7 @@ en:
 
   about:
     h1: "About"
+    job: "creative developer"
     email:
       copy: "Copy"
       send: "Send an email"
