--- a/locales/en.yml
+++ b/locales/en.yml
@@ -52,6 +52,7 @@ en:
       title: Awards
       text:
         - <a href="/images/awards/design-nominees.pdf" target="_blank">SOTD</a> by <a href="https://www.designnominees.com/sites/bastien-robert-portfolio" target="_blank">Design Nominees</a>
+        - SOTD par <a href="http://cssreel.com/Website/bastien-robert-portfolio" target="_blank">CSS Reel</a>
 
   projects:
     show-more: "show more"
