--- a/locales/en.yml
+++ b/locales/en.yml
@@ -46,7 +46,7 @@ en:
     technos: "My stack"
     text:
       - From a very young age, I devote myself to the creation of front-end languages web sites in back-end languages.
-      - During my training, I was able to develop my skills through several web and mobile projects. Today I wish to devote myself to the development of experiments.
+      - I am currently studying design and interactive development at Gobelins School, Young Jury at Awwwards and developer at Unlikely Studio.
       - See my <a href="/images/CV-en.pdf" target="_blank">CV</a> or my <a href="/images/book.pdf" target="_blank">book</a> in french
     awards:
       title: Awards
