--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -46,7 +46,7 @@ fr:
     technos: "Mes technos"
     text:
       - Depuis tout jeune, je m'adonne à la création de site web des langages front-end aux langages back-end.
-      - Lors de ma formation, j'ai pu développer mes compétences à travers plusieurs projets web et mobiles. Aujourd'hui je souhaite me consacrer au développement d'expériences.
+      - Je suis actuellement étudiant en design et développement interactif à l'École des Gobelins, Young Jury aux Awwwards et développeur chez Unlikely Studio.
       - Voir mon <a href="/images/CV-fr.pdf" target="_blank">CV</a> ou mon <a href="/images/book.pdf" target="_blank">book</a>
     awards:
       title: Awards
